Project_3 Build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ build-backend:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Back-end build
+          name: Build Back-end
           command: |
               cd backend
               npm install
