Project_3 Build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ build-backend:
           key: backend-build
 
 workflows:
-  default:
+  serverconfig:
     jobs:
       - build-frontend
       - build-backend          
