--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,11 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            # Your code here
-            # exit 1
-            cd frontend
-            npm install
+             # Your code here
+             # exit 1
+             cd frontend
+             npm install
+             npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -33,8 +34,9 @@ jobs:
           command: |
              # Your code here
              #  exit 1
-            cd backend
-            npm install
+             cd backend
+             npm install
+             npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
