--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,6 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
-
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -41,8 +40,47 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build
 
+  test-frontend:
+    docker:
+      # Docker image here
+    steps:
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: frontend test
+          command: |
+            cd frontend
+            npm install
+            npm run test          
+
+  test-backend:
+    docker:
+      # Docker image here
+    steps:
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: backend test
+          command: |
+            cd backend
+            npm install
+            npm run test 
+
 workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend          
+      - build-backend 
+
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]         
