--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,41 @@ jobs:
             npm install
             npm run test 
 
+  scan-frontend:
+    docker:
+      # Docker image here
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: frontend scan
+          command: |
+              cd frontend
+              npm audit --audit-level=critical --force
+
+  scan-backend:
+    docker:
+      # Docker image here
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: backend scan
+          command: |
+              cd backend
+              npm audit fix --audit-level=critical --force
+
+
 workflows:
   default:
     jobs:
@@ -85,4 +120,9 @@ workflows:
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
-          requires: [build-backend]         
+          requires: [build-backend]
+
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]         
