--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,8 @@ jobs:
           name: frontend scan
           command: |
               cd frontend
-              npm audit --audit-level=critical --force
+              npm audit fix --audit-level=critical --force
+            #npm audit --audit-level=critical --force
 
   scan-backend:
     docker:
@@ -108,7 +109,8 @@ jobs:
           name: backend scan
           command: |
               cd backend
-              npm audit fix --audit-level=critical --force
+              npm audit --audit-level=critical --force
+            #npm audit fix --audit-level=critical --force
 
 
 workflows:
