--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ jobs:
           name: frontend scan
           command: |
               cd frontend
+              npm install
               npm audit fix --audit-level=critical --force
             #npm audit --audit-level=critical --force
 
