--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,9 +92,8 @@ jobs:
           command: |
               cd frontend
               npm install
-              npm audit fix --audit-level=critical --force
-            #npm audit --audit-level=critical --force
-
+              npm audit --audit-level=critical --force
+             #npm audit fix --audit-level=critical --force
   scan-backend:
     docker:
       # Docker image here
