--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,9 @@ jobs:
           command: |
               cd frontend
               npm install
-              npm audit --audit-level=critical --force
-             #npm audit fix --audit-level=critical --force
+              npm audit fix --audit-level=critical --force
+            #npm audit --audit-level=critical --force
+             
   scan-backend:
     docker:
       # Docker image here
@@ -110,7 +111,7 @@ jobs:
           command: |
               cd backend
               npm audit fix --audit-level=critical --force
-            #npm audit --audit-level=critical --force
+              npm audit --audit-level=critical --force
 
 
 workflows:
