--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,23 @@
 version: 2.1
 
+orbs:
+  slack: circleci/node:13.8.0
+jobs:
+  notify:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - run: echo "Sending status"
+            - slack/notify:
+                event: fail
+                template: basic_fail_1
+            - slack/notify:
+                event: pass
+                template: success_tagged_deploy_1
+      
+
+
+
 jobs:
 
   build-frontend:
@@ -127,4 +145,9 @@ workflows:
       - scan-backend:
           requires: [build-backend]
       - scan-frontend:
-          requires: [build-frontend]         
+          requires: [build-frontend]
+
+  send-notification:
+    jobs:
+      - notify:
+          context: slack-secrets      
