--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   notify:
     docker:
-      - image: 'cimg/base:stable'
+      - image: circleci/node:13.8.0
     steps:
       - run: echo "Sending status"
       - slack/notify:
