Changes made to slack code for troubleshooting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ jobs:
 
   success:
     docker:
-      - image:  'circleci/base:stable'
+      - image:  'cimg/base:stable'
     steps:
       - slack/notify:
           channel:  Cloud_DevOps
