--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,8 +203,8 @@ jobs:
             - project/.circleci/outputs/backend_url.txt
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure
-      - destroy_environment:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      #- destroy_environment:
+          #workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
 workflows:
   default:
