--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,15 +175,15 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --stack-name udapeople-backend-serv-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name "udapeople-backend-serv-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople-backend-serv-${CIRCLE_WORKFLOW_ID:0:7} 
       - run:
           name: Ensure front-end infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --stack-name udapeople-frontend-serv-${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name "udapeople-frontend-serv-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \  
               --tags project=udapeople-frontend-serv-${CIRCLE_WORKFLOW_ID:0:7}
       - run:
