--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,7 +184,7 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
               --stack-name "udapeople-frontend-serv-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID=udapeople-project3 \  
+              --parameter-overrides workflow_id=udapeople-project3 \  
               --tags project=udapeople-frontend-serv-${CIRCLE_WORKFLOW_ID:0:7}
       - run:
           name: Add back-end ip to ansible inventory
