--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -437,6 +437,10 @@ workflows:
           filters:
             branches:
               only: [master]
+      - notify:
+          context: slack-secrets
+          requires:
+            - scan-backend
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
