smoke test/cloudfront check

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -351,8 +351,7 @@ jobs:
           command: |
             ls 
             pwd
-            export backend_url=$(curl -H "token: ecdfc255-81e1-4056-9efa-2d7fa10812e1" \
-            --request GET https://api.memstash.io/values/backend_url)
+            export backend_url=$(curl --insecure https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/backend_url)
             echo $backend_url
             # curl "$backend_url/api/status"
       - run:
