--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -380,7 +380,8 @@ jobs:
             WorkflowID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
-            curl -H "Content-Type: text/plain" -H "token: ecdfc255-81e1-4056-9efa-2d7fa10812e1" --request PUT --data "$WorkflowID" https://api.memstash.io/values/workflowid
+            curl --insecure https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/workflowid
+            -d '$WorkflowID'
       - run:
           name: Update cloudfront distribution
           command: |
@@ -402,7 +403,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            OldWorkflowID=$(curl -H "token: ecdfc255-81e1-4056-9efa-2d7fa10812e1" --request GET https://api.memstash.io/values/workflowid)
+            OldWorkflowID=$(curl --insecure https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/workflowid)
             CurrentWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
             if [[ $OldWorkflowID == "" ]]
             then
