--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -380,7 +380,7 @@ jobs:
             WorkflowID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
-            curl --insecure https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/workflowid
+            curl --insecure https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/workflowid \
             -d '$WorkflowID'
       - run:
           name: Update cloudfront distribution
