--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -387,8 +387,8 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
+              --stack-name "InitialStack" \
               --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
-              --stack-name "udapeople-cloudfrontstack" \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
       # Here's where you will add some code to rollback on failure
       - revert-migrations:
