--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,11 +379,11 @@ jobs:
       - run:
           name: get old workflow for clean
           command: |
-            export OLD_WORKFLOW_ID-$(aws cloudformation \
+            WorkflowID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
-            echo "Old workflow ID: $OLD_WORKFLOW_ID"
-            curl  https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+            echo "Old workflow ID: $WorkflowID"
+            curl  https://kvdb.io/EV3nWbZyRWNxizvYe5UmdV/old_workflow_id -d "$WorkflowID"
       - run:
           name: Update cloudfront distribution
           command: |
