--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,13 +1,15 @@
 ---
 - name: "update apt"
-  become: yes
-  apt:
-    update_cache: yes
-
-- name: "upgrade apt packages"
   become: true
   apt:
-    upgrade: "yes"
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400
+
+- name: "Remove some dependences that are not required"
+  become: true
+  apt:
+    autoremove: yes
 
 - name: "install dependencies."
   become: true
@@ -23,14 +25,18 @@
     global: yes
     production: yes
 
-- name: "install nodejs 12.20.1"
-  become: yes
-  shell: n 12.20.1
+- name: "Install Node.js and NPM"
+  apt:
+    name:
+      - "nodejs"
+      - "npm"
+    state: latest
+    update_cache: yes
 
-- name: "install pm2"
+- name: "Install pm2"
   become: true
   npm:
     name: pm2
     global: yes
     production: yes
-    state: present
+    state: latest
