To be check solution

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,40 +1,43 @@
----
-  - name: install rsync on the ansible controller
-    become: yes
-    connection: local
-    package:
-      name: 
-        - openssh
-        - rsync
-      state: present
-      
-  - name: "move files to server"
-    become: yes
-    synchronize:
-      src: /root/project/backend/dist
-      dest: ./udapeople
-      recursive: true
+- name: Create app directory
+  file:
+    path: $HOME/web
+    state: directory
 
-  - name: "move node modules"
-    become: yes
-    synchronize:
-      src: /root/project/backend/node_modules
-      dest: ./udapeople
-      recursive: true
+- name: "Copy files to server"
+  ansible.builtin.copy:
+    src: "files/artifact.tar.gz"
+    dest: "$HOME/artifact.tar.gz"
+    follow: yes
 
-  - name: "run server"
-    become: true
-    command: pm2 start -f ./main.js
-    args:
-      chdir: ./udapeople/dist
-    environment:
-      ENVIRONMENT: production
-      TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-      TYPEORM_MIGRATIONS_DIR: "./migrations"
-      TYPEORM_MIGRATIONS: "./migrations/*.js"
-      TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
-      TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-      TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-      TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-      TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-      TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+- name: "install dependencies."
+  become: true
+  apt:
+    name:
+      - nodejs
+      - npm
+    state: latest
+    update_cache: yes
+
+- name: "Install Dependencies"
+  become: true
+  shell: |
+    tar -xvf artifact.tar.gz .
+    rm artifact.tar.gz
+    npm install
+
+# - name: Create app directory
+#   file:
+#     path: $HOME/web
+#     state: directory
+
+# - name: extract artifact
+#   become: true
+#   unarchive:
+#     src: files/artifact.tar.gz 
+#     dest: .
+
+- name: start app
+  become: true
+  shell: |
+    sudo pm2 stop default
+    sudo pm2 start npm -- run start
